test/Fail/Issue1023.err
Issue1023.agda:28.1-29.41: error: [TerminationIssue]
Termination checking failed for the following functions:
  noo
Problematic calls:
  noo FOne iso f
    (at Issue1023.agda:29.27-30)
